Semantic update of local address to private address and optimizations for slow connections.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Internal MP Mgmt port connectivity status
   wait_for:
     port: '{{ mp_int_mgmt_port }}'
-    host: '{{ local_address }}'
+    host: '{{ private_address }}'
     timeout: 1
   register: mp_int_mgmt_port_status
   ignore_errors: yes
@@ -12,7 +12,7 @@
 - name: Internal MP Router port connectivity status
   wait_for:
     port: '{{ mp_router_port }}'
-    host: '{{ local_address }}'
+    host: '{{ private_address }}'
     timeout: 1
   register: mp_router_port_status
   ignore_errors: yes
@@ -20,7 +20,7 @@
 - name: Internal MP JMX port connectivity status
   wait_for:
     port: '{{ mp_jmx_port }}'
-    host: '{{ local_address}}'
+    host: '{{ private_address}}'
     timeout: 1
   register: mp_jmx_port_status
   ignore_errors: yes
@@ -28,7 +28,7 @@
 - name: MP Mgmt port connectivity status
   wait_for:
     port: '{{ mp_ext_mgmt_port }}'
-    host: '{{ local_address}}'
+    host: '{{ private_address}}'
     timeout: 1
   register: mp_ext_mgmt_port_status
   ignore_errors: yes
